Added a bunch of side projects

--- a/index.html
+++ b/index.html
@@ -29,15 +29,20 @@ until it surrenders its mysteries to you.</p>
   {% endfor %}
 </ul>
 
-<h2>Side projects I work/worked on</h2>
-
+<h2>Small side projects I work/worked on</h2>
 <ul itemscope itemtype="https://schema.org/SiteNavigationElement" role="list" aria-label="Side projects" class="list">
   <meta itemprop="name" content="Side projects">
-  <li role="listitem"><a href="https://git.mitjafelicijan.com/cord.h.git/" target="_blank">cord.h</a> — Small C library for handling strings</li>
-  <li role="listitem"><a href="https://git.mitjafelicijan.com/mprogress.git/" target="_blank">mprogress</a> — Tiny utility that displays progress bar in terminal</li>
-  <li role="listitem"><a href="https://git.mitjafelicijan.com/journalctl-proxy.git/" target="_blank">journalctl-proxy</a> — Exposes your systemd logs to web via web interface</li>
-  <li role="listitem"><a href="https://git.mitjafelicijan.com/redis-marshal.git/" target="_blank">redis-marshal</a> — Lightweight Redis data exploration tool</li>
-  <li role="listitem"><a href="https://git.mitjafelicijan.com/vertex.git/" target="_blank">vertex</a> — Create mock API's and add basic logic to simplify prototyping</li>
-  <li role="listitem"><a href="https://git.mitjafelicijan.com/dna-encoding.git/" target="_blank">dna-encoding</a> — Tools for encoding files to DNA sequence</li>
-  <li role="listitem"><a href="https://git.mitjafelicijan.com/scarecrow.git/" target="_blank">scarecrow</a> — Minimal configuration reverse proxy</li>
+  <li role="listitem"><a href="https://github.com/mitjafelicijan/binary-visualization" target="_blank">binary-visualization </a> — Visualizations and exploration of binary files</li>
+  <li role="listitem"><a href="https://github.com/mitjafelicijan/p9tree" target="_blank">p9tree</a> — Tree utility for 9front/Plan9 operating systems</li>
+  <li role="listitem"><a href="https://github.com/mitjafelicijan/errand" target="_blank">errand</a> — Task runner for the command line</li>
+  <li role="listitem"><a href="https://github.com/mitjafelicijan/i3blocks" target="_blank">i3blocks</a> — Task Minimal i3blocks indicators</li>
+  <li role="listitem"><a href="https://github.com/mitjafelicijan/cord.h" target="_blank">cord.h</a> — Small C library for handling strings</li>
+  <li role="listitem"><a href="https://github.com/mitjafelicijan/mprogress" target="_blank">mprogress</a> — Tiny utility that displays progress bar in terminal</li>
+  <li role="listitem"><a href="https://github.com/mitjafelicijan/qli" target="_blank">qli</a> — Quantum Lorem Ipsum generator for command line</li>
+  <li role="listitem"><a href="https://github.com/mitjafelicijan/mod-tinycache" target="_blank">mod-tinycache</a> — Apache 2 caching module</li>
+  <li role="listitem"><a href="https://github.com/mitjafelicijan/journalctl-proxy" target="_blank">journalctl-proxy</a> — Exposes your systemd logs to web via web interface</li>
+  <li role="listitem"><a href="https://github.com/mitjafelicijan/redis-marshal" target="_blank">redis-marshal</a> — Lightweight Redis UI tool</li>
+  <li role="listitem"><a href="https://github.com/mitjafelicijan/vertex" target="_blank">vertex</a> — Create mock API's and add basic logic to simplify prototyping</li>
+  <li role="listitem"><a href="https://github.com/mitjafelicijan/dna-encoding" target="_blank">dna-encoding</a> — Tools for encoding files to DNA sequences</li>
+  <li role="listitem"><a href="https://github.com/mitjafelicijan/scarecrow" target="_blank">scarecrow</a> — Minimal configuration reverse proxy</li>
 </ul>
