Update wording in index

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@ layout: index
 <p>You do not learn by relaxing. You learn by violently assaulting your problem
 until it surrenders its mysteries to you.</p>
 
-<a style="max-width:600px;display:inline-block;background:blue;color:white;padding:1em;" href="https://mitjafelicijan.github.io/binary-visualization/" target="_blank">
-  Examine graphical representations of binary files using diagrams that
-  illustrate connections between pairs of bytes (digraphs) and triplets of bytes
-  (trigraphs).
+<a style="max-width:650px;display:inline-block;background:blue;color:white;padding:1em;" href="https://mitjafelicijan.github.io/binary-visualization/" target="_blank">
+  <strong>Latest experiment:</strong> Examine graphical representations of
+  binary files using diagrams that illustrate connections between pairs of bytes
+  (digraphs) and triplets of bytes (trigraphs).
 </a>
 
 <h2>More long form, ramblings etc</h2>
