--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: index
 ---
 
-<p>You do not learn by relaxing. You learn by violently assaulting your problem
-until it surrenders its mysteries to you.</p>
+<p><i>You do not learn by relaxing. You learn by violently assaulting your problem
+until it surrenders its mysteries to you.</i></p>
 
 <a style="max-width:650px;display:inline-block;background:blue;color:white;padding:1em;" href="https://mitjafelicijan.github.io/binary-visualization/" target="_blank">
   <strong>Latest experiment:</strong> Examine graphical representations of
