Added aduio to homepage

--- a/index.html
+++ b/index.html
@@ -52,3 +52,10 @@ until it surrenders its mysteries to you.</i></p>
   <li role="listitem"><a href="https://github.com/mitjafelicijan/dna-encoding" target="_blank">dna-encoding</a> — Tools for encoding files to DNA sequences</li>
   <li role="listitem"><a href="https://github.com/mitjafelicijan/scarecrow" target="_blank">scarecrow</a> — Minimal configuration reverse proxy</li>
 </ul>
+
+<h2>Audio experiments</h2>
+
+<p>Neobrutalism and the search for a monolith</p>
+<audio controls>
+  <source src="/assets/audio/Mitja Felicijan - Neobrutalism and the search for a monolith.ogg" type="audio/ogg">
+</audio>
