Added audio to homepage

--- a/index.html
+++ b/index.html
@@ -57,5 +57,25 @@ until it surrenders its mysteries to you.</i></p>
 
 <p>Neobrutalism and the search for a monolith</p>
 <audio controls>
-  <source src="/assets/audio/Mitja Felicijan - Neobrutalism and the search for a monolith.ogg" type="audio/ogg">
+  <source src="/assets/audio/mitja-felicijan-neobrutalism-and-the-search-for-a-monolith.mp3" type="audio/mpeg">
+</audio>
+
+<p>A bunch of inter-dimensional people with loud clocks</p>
+<audio controls>
+  <source src="/assets/audio/mitja-felicijan-a-bunch-of-inter-dimensional-people-with-loud-clocks.mp3" type="audio/mpeg">
+</audio>
+
+<p>A planet where every organism is a plant</p>
+<audio controls>
+  <source src="/assets/audio/mitja-felicijan-a-planet-where-every-organism-is-a-plant.mp3" type="audio/mpeg">
+</audio>
+
+<p>Bio implants having a fit and reprogramming your brain</p>
+<audio controls>
+  <source src="/assets/audio/mitja-felicijan-bio-implants-having-a-fit-and-reprogramming-your-brain.mp3" type="audio/mpeg">
+</audio>
+
+<p>Two black holes conversing about the weather</p>
+<audio controls>
+  <source src="/assets/audio/mitja-felicijan-two-black-holes-conversing-about-the-weather.mp3" type="audio/mpeg">
 </audio>
