Change title of audio experiments

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ until it surrenders its mysteries to you.</i></p>
   <li role="listitem"><a href="https://github.com/mitjafelicijan/scarecrow" target="_blank">scarecrow</a> — Minimal configuration reverse proxy</li>
 </ul>
 
-<h2>Audio experiments</h2>
+<h2>Audio experimentation</h2>
 
 <p>Neobrutalism and the search for a monolith</p>
 <audio controls>
