--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: index
 <p><i>You do not learn by relaxing. You learn by violently assaulting your problem
 until it surrenders its mysteries to you.</i></p>
 
-<a style="max-width:650px;display:inline-block;background:blue;color:white;padding:1em;" href="https://mitjafelicijan.github.io/binary-visualization/" target="_blank">
+<a style="border-radius:3px;max-width:650px;display:inline-block;background:blue;color:white;padding:1em;" href="https://mitjafelicijan.github.io/binary-visualization/" target="_blank">
   <strong>Latest experiment:</strong> Examine graphical representations of
   binary files using diagrams that illustrate connections between pairs of bytes
   (digraphs) and triplets of bytes (trigraphs).
